--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ allprojects {
 }
 
 subprojects {
+    repositories {
+        jcenter()
+    }
     buildscript {
         dependencies {
             classpath 'com.android.tools.build:gradle:2.1.2'
