--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.0"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
+    useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "net.postmodernapps.filterkhor"
         minSdkVersion 15
-        targetSdkVersion 24
+        targetSdkVersion 25
+        multiDexEnabled true
+        vectorDrawables.useSupportLibrary = true
         versionCode 4
         versionName "0.1.1"
         //manifestPlaceholders = [HOCKEYAPP_APP_ID: ""]
@@ -18,17 +21,31 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+dexOptions {
+    jumboMode = true
+    javaMaxHeapSize "4g"
+}
+
+packagingOptions {
+    exclude 'META-INF/LICENSE.txt'
+    exclude 'META-INF/NOTICE.txt'
+    exclude 'META-INF/LICENSE'
+    exclude 'META-INF/NOTICE'
+    exclude 'META-INF/DEPENDENCIES'
+    exclude 'LICENSE.txt'
+}
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:multidex:1.0.1'
-    compile 'com.android.support:appcompat-v7:24.1.1'
-    compile 'com.android.support:design:24.1.1'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:design:25.1.0'
     compile (project(':external:securereaderlibrary')) {
         exclude module: 'support-v4'
     }
     compile 'com.google.code.gson:gson:2.4'
+    compile 'com.squareup.okhttp:okhttp:2.3.0'
     //compile 'net.hockeyapp.android:HockeySDK:4.0.0'
 }
