--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath 'com.android.tools.build:gradle:2.2.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,13 +15,16 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url "http://dl.bintray.com/guardianproject/CipherKit"
+        }
     }
 }
 
 subprojects {
     buildscript {
         dependencies {
-            classpath 'com.android.tools.build:gradle:2.1.2'
+            classpath 'com.android.tools.build:gradle:2.2.3'
         }
     }
 }
